# OpenGL-Packet-Visuailzer-

./: CMakeLists.txt  README.md
data/: capture.json
shaders/: edge.frag  edge.vert  node.frag  node.vert  packet.frag  packet.vert
src/: graph.h  main.cpp  parser.cpp  parser.h
